src/assets/scss/main.scss
/* ... */
@media only screen and (min-height: 800px) and (max-height:900px) {
  .ant-table-body {
    max-height: 500px !important;
  }
}


@media only screen and (min-height: 900px) and (max-height:1000px) {
  .ant-table-body {
    max-height: 600px !important;
  }
}

@media only screen and (min-height: 1000px) and (max-height:1200px) {
  .ant-table-body {
    max-height: 700px !important;
  }
}

@media only screen and (min-height: 1200px) {
  .ant-table-body {
    max-height: 800px !important;
  }
}

.reply-chat-option-image{
  padding: 0.5rem 0;
}

.chats-modality-status{
  display:flex;
  // width: 100%;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
}

.chats-study-id{
  background-color: #00a0e3 !important;
  color: white;
  width: fit-content;
  padding: 0.3rem;
  border-radius: 0.2rem;
}

.chats-study-modality{
  background-color:transparent;
  color:  black !important;
  width: fit-content;
  padding: 0.3rem;
  border-radius: 0.2rem;
}


.Normal-report-view-option-modal{
  .ant-modal-body{
    padding-top: 1rem !important;
  }
}

.h-10{
  height:10rem;
}
.h-15{
  height:15rem;
}
.h-20{
  height:20rem;
}


.overflow-x-auto{
  overflow-x: auto;
  overflow-y: hidden;
}

.overflow-y-auto{
  overflow-y: auto;
  overflow-x: hidden;
}

.mt-1{
  margin-top: 0.5rem;
}

.ant-select-selector .ant-select-selection-placeholder {
  line-height: 45px !important;
}

#report_study_description{
margin-top: 8px !important;
}

.h-21{
  height: 21rem;
}

.h-9{
  height: 9rem;
}


.ohif-viwer-option-icon{
  height: 16px;
  width: 16px;
  margin-top: auto;
  margin-bottom: auto;
}

